[package]
name = "narnia"
version = "0.2.0"
description = "Secure hidden service webserver"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/narnia"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
anyhow = "1.0.40"
caps = "0.5.1"
env_logger = "0.8.3"
htmlescape = "0.3.1"
libtor = "45.7.0"
log = "0.4.14"
nix = "0.20.0"
structopt = "0.3.21"

[dev-dependencies]
test-case = "1.1.0"
